--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <nav class="menu-tab">
       <ul>
        <li>
-         <a href="#">Profile</a>
+         <a href="#Profile">Profile</a>
         </li>
         <li >
-          <a href="#">Favorite</a>
+          <a href="#Favorite">Favorite</a>
         </li>
       </ul>
       
@@ -26,7 +26,7 @@
   
   
     <main>
-      <h1>Profile</h1>
+      <h1 id="Profile">Profile</h1>
       
       <div class="main-wrapper">
 
@@ -49,7 +49,7 @@
 
 
         <div class="contents-wrapper">
-          <h1>Favorite</h1>
+          <h1 id="Favorite">Favorite</h1>
 
           <div class="details-wrapper">
 
